--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,31 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=389712018153235&autoLogAppEvents=1"
+      nonce="Ixvi8pqw"
+    ></script>
+    <script>
+      window.twttr = (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0],
+          t = window.twttr || {}
+        if (d.getElementById(id)) return t
+        js = d.createElement(s)
+        js.id = id
+        js.src = 'https://platform.twitter.com/widgets.js'
+        fjs.parentNode.insertBefore(js, fjs)
+
+        t._e = []
+        t.ready = function (f) {
+          t._e.push(f)
+        }
+
+        return t
+      })(document, 'script', 'twitter-wjs')
+    </script>
   </body>
 </html>
